tests/hulk/errors/syntactic/missing_type_body.hulk
function f(x: ): Number {
    x;
}

print(f(5));
